--- a/eksplorasi-2/src/views/error.jade
+++ b/eksplorasi-2/src/views/error.jade
@@ -1,8 +1,11 @@
 extends ./layout.jade
 
 block content
-  div.container.wrap.text-xs-center.p-t-3
+  //error
+  div#error.container.wrap.text-xs-center
     p
       h1 Error 404: Page Not Found
     p @#{username} account does not exist
     p You might have entered the wrong username
+    a.btn.btn-primary.btn-lg.m-t-3(href="/" type="button") Return Home
+  ///error
