--- a/eksplorasi-2/src/views/layout.jade
+++ b/eksplorasi-2/src/views/layout.jade
@@ -12,14 +12,8 @@ html
     include ./partials/_nav.jade
     block content
     include ./partials/_footer.jade
+
+    //Scripts
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js" integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7" crossorigin="anonymous")
-    script(type='text/javascript').
-      var adjust = function() {
-        var $profpic = $('.profpic');
-        var width = $('.picdiv').width();
-        $profpic.css('width', width);
-        $profpic.css('height', width);
-      };
-      adjust();
-      $(window).resize(adjust);
+    script(src="/static/action.js")
