--- a/eksplorasi-2/src/views/index.jade
+++ b/eksplorasi-2/src/views/index.jade
@@ -1,9 +1,11 @@
 extends ./layout.jade
 
 block content
+  //index
   div.index.wrap
     div.text-xs-center
       h1.display-2 PIXY
       h1.display The home for all your photos.
       p.m-y-3 Upload, access, organize, edit, and share your photos from any device, from anywhere in the world.
       button#signup.btn.btn-primary.btn-lg.m-t-2 Sign Up
+  ///index
