Add register feature
Add mongoose as dependency, new templates, new services using
ngResource.

--- a/project/app_client/templates/home.html
+++ b/project/app_client/templates/home.html
@@ -3,6 +3,6 @@
     <h1 class="display-2">PIXY</h1>
     <h1 class="display">The home for all your photos.</h1>
     <p class="m-y-3">Upload, access, organize, edit, and share your photos from any device, from anywhere in the world.</p>
-    <button id="signup" class="btn btn-primary btn-lg m-t-2">Sign Up</button>
+    <a id="signup" class="btn btn-primary btn-lg m-t-2" href="register">Sign Up</a>
   </div>
 </div>
