--- a/project/app_client/partials/scripts.html
+++ b/project/app_client/partials/scripts.html
@@ -1,3 +1,5 @@
+<!-- Angular custom files -->
+<script src="/controllers/register.js"></script>
 <script src="/bower/jquery/dist/jquery.js"></script>
 <script src="/bower/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/static/action.js"></script>
