--- a/project/app_client/partials/nav.html
+++ b/project/app_client/partials/nav.html
@@ -1,5 +1,7 @@
 <nav ng-controller="NavController" class="navbar navbar-fixed navbar-dark bg-danger">
-  <div class="container"><a href="/" class="navbar-brand">PICSHARE</a>
+  <div class="container">
+    <a ng-hide="isLoggedIn" href="/" class="navbar-brand">PICSHARE</a>
+    <a ng-show="isLoggedIn" class="navbar-brand">{{currentUser}}</a>
     <form method="get" action="/" class="form-inline pull-xs-right">
       <input type="text" name="username" placeholder="Username..." class="form-control"/>
       <button type="submit" class="btn btn-success">Search</button>
