Add post image feature

--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -26,9 +26,9 @@
 /***********************************
  User's pictures
 ***********************************/
-.picdiv {
+.profpic {
   object-fit: cover;
-  object-position: center;
+  object-position: 50% 50%;
 }
 
 /***********************************
