--- a/project/app_client/templates/login.html
+++ b/project/app_client/templates/login.html
@@ -9,6 +9,9 @@
       <label for="password">Password</label>
       <input type="password" class="form-control" id="password" ng-model="user.password" placeholder="Password">
     </fieldset>
+    <div ng-show="isRejected" class="alert alert-danger" role="alert">
+      <strong>Oh snap!</strong> The username and the password don't match :(.
+    </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
