--- a/project/app_client/templates/profile.html
+++ b/project/app_client/templates/profile.html
@@ -3,19 +3,19 @@
   <p class="lead">@{{user.username}} | {{user.fullname}}</p>
   <p><!-- bio --></p>
   <div class="row">
-    <div ng-show="isCurrentUser" class="col-md-4 col-xs-6 p-b-1 text-xs-center picdiv">
-      <a href="#" data-toggle="modal" data-target=".bd-example-modal-lg">
-        <img src="/static/img/plus.png" class="img-fluid profpic"/>
+    <div ng-show="isCurrentUser" class="col-md-4 col-xs-6 p-b-1 text-xs-center">
+      <a href="#" ng-click="viewImage = !viewImage" data-toggle="modal" data-target=".bd-example-modal-lg">
+        <img src="/static/img/plus.png" class="img-fluid center-block profpic"/>
       </a>
     </div>
     <div ng-repeat="post in user.posts" class="col-md-4 col-xs-6 p-b-1 text-xs-center picdiv">
-      <a href="{{post.img}}">
+      <a href="#">
         <img ng-src="{{post.img}}" class="img-fluid center-block profpic"/>
       </a>
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- Post image modal -->
   <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -46,3 +46,5 @@
     </div>
   </div>
 </div>
+
+<script src="static/scripts/adjust.js"></script>
