--- a/project/public/css/style.css
+++ b/project/public/css/style.css
@@ -66,3 +66,18 @@
 .wrap {
   min-height: calc(100vh - 80px);
 }
+
+.modal-detail {
+  width: 90%;
+}
+
+.post-image {
+  width: 100%;
+  height: auto;
+}
+
+.post-avatar {
+  border-radius: 100%;
+  width: 80px;
+  height: 80px;
+}
