--- a/project/app_client/templates/post.html
+++ b/project/app_client/templates/post.html
@@ -1,13 +1,14 @@
-<div ng-controller="PostController" class="container text-xs-center wrap p-t-2">
-  <div class="row p-t-2">
-    <div class="col-xs-7">
-      <img class="post-image" ng-src="{{post.img}}">
+<div ng-controller="PostController" class="text-xs-center wrap p-t-2">
+  <div class="p-t-2 post-div">
+    <div class="image-div" style="background-color: black">
+      <img class="image-img" ng-src="{{post.img}}">
     </div>
-    <div class="col-xs-5 text-xs-left bg-success">
-      <img class="post-avatar" ng-src="{{post.user.avatar}}">
+    <div class="desc-div" style="border: 1px solid black">
+      <img class="post-avatar m-t-1" ng-src="{{post.user.avatar}}">
       <span class="p-l-1">{{post.user.username}}</span>
+      <p class="p-t-1">{{post.desc}}</p>
     </div>
   </div>
 </div>
 
-<script src="static/scripts/adjust.js"></script>
+<script src="static/scripts/adjustPost.js"></script>
