yang dilakukan : 1. menambahkan model, controller, view untuk notification yang terdiri dari notifpost dan notiflike 2. some front-end 3. menghapus turbo-links dari gem karena menyebabkan beberapa javascript tidak dapat digunakan 4. menambahkan perintah untuk meng-create object notifpost jika ada post yang diciptakan 5. menambahkan perintah untuk meng-create object notifpostlike jika sebuah post diupvote/downvote/unupvote/undownvote 6. mendefinisikan changeread pada notifpost dan notifpostlike controller untuk mengubah atribut read menjadi true 7. menambahkan routes changeread pada routes file 8. mengubah application layout agar pada saat scroll bar paling atas mengikuti

--- a/OmoCommunity/app/assets/stylesheets/application.css
+++ b/OmoCommunity/app/assets/stylesheets/application.css
@@ -36,6 +36,7 @@
     vertical-align: middle;
     height: 30px;
     font-size: 120%;
+    z-index: 999;
 }
 .headtitle2 {
     font-family: 'Raleway', sans-serif;
@@ -135,6 +136,7 @@
   text-decoration: none;
 
 }
+
 .us {
   top: 0%;
   border: none;
