--- a/OmoCommunity/app/views/layouts/application.html.haml
+++ b/OmoCommunity/app/views/layouts/application.html.haml
@@ -8,7 +8,8 @@
 		= javascript_include_tag 'application', 'data-turbolinks-track' => true
 		= csrf_meta_tags
 		= javascript_include_tag Ckeditor.cdn_url
-	%body
+
+	%div{class: "fr follow-scroll"}
 		.backg	
 			.judul
 				= link_to image_tag("/assets/logo.png", class: "headtitle"), root_path
@@ -16,7 +17,6 @@
 				= form_tag(topics_path, :method => "get", id: "search-form") do 
 					= text_field_tag :search, params[:search], placeholder: "Search Topics", class: "serround", autocomplete: "off", size: "66"
 			- if !current_user
-				/= link_to image_tag("http://googleatuob.blogs.ilrt.org/files/2014/05/hangouts.png", size: "30x30"), omniauth_authorize_path(:user, :google_oauth2), class: "ing"
 				- if !current_page?(new_user_registration_path)
 					= link_to 'Sign Up', new_user_registration_path, :class => "up"
 				- else
@@ -34,8 +34,170 @@
 				- else
 					= link_to image_tag("/assets/no-image.jpg", class: "upx"),user_path(current_user) 
 				= link_to "edit", edit_user_registration_path,class: "upy"
+				- notifcounts = current_user.notifposts.where(:read => false).size + current_user.notifpostlikes.where(:read => false).size
+				%div{id: "showDivBtn", class: "notpa"}
+				- if notifcounts == 0	
+				- else
+					%p{class: "nocount"}	
+						= notifcounts
+						
+			
+	%div{:id => "theDiv", class: "dropdown"}
+		- if current_user	
+			- @notifposts1 = current_user.notifposts.all
+			- @notifposts2 = current_user.notifpostlikes.all
+			- @notifposts3 = @notifposts1 + @notifposts2
+			- @notifposts = @notifposts3.sort_by(&:created_at).reverse.first(5)
+			- @notifposts.each do |f|
+				- if !f.read?
+					.nored
+						%br
+						- if f.is_a?(Notifpost)	
+							= link_to "#{(Post.find(f.post_id)).user.username} has posted on #{f.tipe}",changeread_user_notifpost_path(current_user,f), :method => "put",class: "teh noread"
+						- else
+							= link_to "#{User.find(f.uxid).username} has #{f.tipe}d your post",changeread_user_notifpostlike_path(current_user,f), :method => "put",class: "teh noread"
+						.agoxd	
+							= time_ago_in_words(f.created_at)
+							ago
+						%br
+					- if f != @notifposts.last
+						.hline				
+				- else
+					.red
+						%br
+						- if f.is_a?(Notifpost)	
+							= link_to "#{(Post.find(f.post_id)).user.username} has posted on #{f.tipe}",changeread_user_notifpost_path(current_user,f), :method => "put",class: "teh read"
+
+						- else
+							= link_to "#{User.find(f.uxid).username} has #{f.tipe}d your post",changeread_user_notifpostlike_path(current_user,f), :method => "put",class: "teh read"
+						.agoxdg
+							= time_ago_in_words(f.created_at)
+							ago
+						%br
+					- if f != @notifposts.last
+						.hline	
+			
+			.showal
+				= link_to "Show All", user_notifposts_path(current_user),class: "showal"
+				
+				
+				
+	.sad		
 		=yield
+:javascript
+	$(function() {
+	  $('a#show_whatever').click(function(event){
+	    event.preventDefault();
+	    $('div#whatever').toggle();
+	  });
+	});
+
+	$(document).on('click', function(e) {
+	    if ( $(e.target).closest('#showDivBtn').length ) {
+	        $("#theDiv").toggle();
+	    }else if ( ! $(e.target).closest('#theDiv').length ) {
+	        $('#theDiv').hide();
+	    }
+	});
+	(function($) {
+	    var element = $('.follow-scroll'),
+	        originalY = element.offset().top;
+
+	    // Space between element and top of screen (when scrolling)
+	    var topMargin = 0;
+
+	    // Should probably be set in CSS; but here just for emphasis
+	    element.css('position', 'relative');
+
+	    $(window).on('scroll', function(event) {
+	        var scrollTop = $(window).scrollTop();
+
+	        element.stop(false, false).animate({
+	            top: scrollTop < originalY
+	                    ? 0
+	                    : scrollTop - originalY + topMargin
+	        }, 0);
+	    });
+	})(jQuery);
+
 :css
+	.nocount {
+		color:white;
+		font-family: 'Raleway', sans-serif;
+		font-weight: 400;
+		font-size:10px;
+		position:relative;
+		right:14%;
+		float:right;
+		padding-left:5px;
+		padding-right:5px;
+		height:16px;
+		border-radius:80%;
+		background:#DC513A;
+	}
+	#theDiv {
+		font-family: 'Raleway', sans-serif;
+		font-weight: 400;
+	}
+	.fr {
+		z-index:99;
+	}
+	.showal {
+		height: 50px;
+		text-align:center;
+		background:#2B473D;
+		text-decoration:none;
+		line-height:50px;
+		color:#23A86D;
+	}
+	.hline { width:100%; height:1px; background: #fff ; display: block; margin: 0 auto;}
+	.agoxd {
+		color : #2D2F31;
+		font-size:10px;
+	}
+	.agoxdg {
+		color : #23A86D;
+		font-size:10px;
+	}
+	.nored {
+		background : rgb(35,168,109);
+		padding-left : 10px;
+		padding-right : 10px;
+	}
+	.red:hover {
+		background: #353A3C
+	}
+	.red {
+
+		padding-left : 10px;
+		padding-right : 10px;
+	}
+	.nored:hover {
+		background:#30775A
+	}
+	.noread {
+		color: rgb(45,47,49);
+	}
+	.read {
+		color: rgb(35,168,109);	
+	}
+	.teh {
+		text-decoration:none;
+		font-size: 15px;
+	}
+	.dropdown {
+		background:rgb(63,70,73);
+		width:23%;
+		float:right;
+		top:50px;
+		position:fixed;
+		display:none;
+		right:13.1%;
+		border-left: 3px solid rgb(45,47,49);
+		border-right: 3px solid rgb(45,47,49);
+		border-bottom: 3px solid rgb(45,47,49);
+		z-index:99;
+	}
 	.upx {
 		border-radius:100%;
 		width:35px;height:35px;
@@ -72,7 +234,40 @@
 		background: url("/assets/facebook-select.png") no-repeat 50% 50% #23A86D;
 		background-size: 22px 22px;
 	}
-
+	.notpa {
+		color:transparent;
+		text-decoration:none;
+		cursor:pointer;
+		height:50px;
+		position:absolute;
+		right:13.3%;
+		width:50px;
+		display:inline-block;
+		float:right;
+		background : url("/assets/notif.png") no-repeat 50% 50%;
+		background-size:23px 23px;
+	}
+	.notpa:hover {
+		background : url("/assets/notif-select.png") no-repeat 50% 50% #23A86D;
+		background-size:23px 23px;
+	}
+	.notpax {
+		color:transparent;
+		text-decoration:none;
+		cursor:pointer;
+		height:50px;
+		position:absolute;
+		right:13.3%;
+		width:50px;
+		display:inline-block;
+		float:right;
+		background : url("/assets/notif-bubble.png") no-repeat 50% 50%;
+		background-size:23px 23px;
+	}
+	.notpax:hover {
+		background : url("/assets/notif-bubble-select.png") no-repeat 50% 50% #23A86D;
+		background-size:23px 23px;
+	}
 	.upyg {
 		position: absolute;
 		background: url("/assets/google.png") no-repeat 50% 50%;
