--- a/OmoCommunity/app/views/posts/edit.html.haml
+++ b/OmoCommunity/app/views/posts/edit.html.haml
@@ -1,12 +1,13 @@
 .tek
 	%h1 Edit a Post	
-	= simple_form_for ([@topic, @post]) do |f|
+	= simple_form_for ([@topic, @post]), :html => { :multipart => true } do |f|
 		%p Title :
 		= f.input :title, :input_html => {:size => 60 , class: "tes"}, label: false, placeholder: "Your Title Here"
 		%p Content :
 		= f.input :content, label: false,
 	           as: :ckeditor,
 	           :input_html => { :ckeditor => {:toolbar => 'mini'} }
+		= file_field_tag "thefiles[]", type: :file, multiple: true
 		%p
 		= f.submit "Edit Post", class: "butonk"
 :css
