--- a/OmoCommunity/app/views/devise/registrations/edit.html.haml
+++ b/OmoCommunity/app/views/devise/registrations/edit.html.haml
@@ -21,9 +21,11 @@
       .o
       = f.label :"NIM : ", "NIM : "
       = f.input :nim, required: true, label: false, input_html: { :size => 30 ,class: " teksbos", :onkeypress => "return isNumber(event)"}, placeholder: "e.g. 13514000"
+      
       .o
-      = f.label :"Picture : "
+      = f.label :"New Picture : "
       = f.input :image, input_html: {:size => 30, accept: ('.jpg, .png, .jpeg, .tiff, .bmp') }, label: false
+
     .form-actions
       .o
       = f.button :submit, "Update", class: "buton"
