--- a/OmoCommunity/app/views/topics/new.html.haml
+++ b/OmoCommunity/app/views/topics/new.html.haml
@@ -1,14 +1,15 @@
 .tek
 	%h1 Create a Thread	
-	= simple_form_for @topic do |f|
+	= simple_form_for @topic, :html => { :multipart => true }do |f|
 		%p Title :
 		= f.input :title, :input_html => {:size => 60 , class: "tes"}, label: false, placeholder: "Your Title Here"
 		%p Content :
 		= f.input :content, label: false,
 	           as: :ckeditor,
 	           :input_html => { :ckeditor => {:toolbar => 'mini'} }
+		= file_field_tag "thefiles[]", type: :file, multiple: true
 		%p
-		= f.submit "New Topic"
+		= f.submit "New Thread"
 :css
 	.tek {
 		font-family: 'Raleway', sans-serif;
