--- a/project/public/css/post.css
+++ b/project/public/css/post.css
@@ -2,16 +2,20 @@
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
+  margin-top: 80px;
+  margin-bottom: -80px;
 }
 
 .desc-div {
   width: 335px;
+  padding-right: 5px;
+  padding-left: 5px;
 }
 
 .image-div {
   display: flex;
   align-items: center;
-  max-width: 598px;
+  width: 598px;
 }
 
 .image-img {
@@ -26,13 +30,43 @@
   height: 50px;
 }
 
-.comments {
-  overflow-y: auto;
+.likes {
+  margin-top: 8px;
+  text-align: left;
+  height: 35px;
 }
 
-@media only screen and (max-width: 768px) {
+.likes img {
+  height: 20px;
+  width: 20px;
+}
+
+.post-info {
+  border-bottom: 1px solid black;
+  display: flex;
+  align-self: flex-start;
+  align-items: center;
+}
+
+.comments {
+  text-align: justify;
+  overflow-y: auto;
+  height: 319px;
+}
+
+.comments ul {
+  padding-left: 14px;
+  list-style: none;
+}
+
+.comment-add {
+  bottom: 0;
+}
+
+@media only screen and (max-width: 568px) {
   .post-div {
     flex-wrap: wrap;
+    margin-top: 0px;
   }
 
   .desc-div {
