--- a/project/app_client/partials/footer.html
+++ b/project/app_client/partials/footer.html
@@ -1,3 +1,3 @@
-<nav class="navbar navbar-dark bg-danger">
+<nav class="navbar navbar-dark bg-danger" style="height: 55px">
   <div class="container text-xs-center"><span>Created by ranggarmaste</span></div>
 </nav>
