--- a/project/public/css/post.css
+++ b/project/public/css/post.css
@@ -2,14 +2,20 @@
   display: flex;
   justify-content: center;
   flex-wrap: nowrap;
-  margin-top: 80px;
-  margin-bottom: -80px;
+  padding-top: 80px;
+  padding-bottom: -80px;
 }
 
 .desc-div {
   width: 335px;
-  padding-right: 5px;
-  padding-left: 5px;
+  height: 598px;
+  font-size: 15px;
+}
+
+.post-info, .likes,
+.comments, .comment-add {
+  width: 282px;
+  margin: auto;
 }
 
 .image-div {
@@ -36,11 +42,6 @@
   height: 35px;
 }
 
-.likes img {
-  height: 20px;
-  width: 20px;
-}
-
 .post-info {
   border-bottom: 1px solid black;
   display: flex;
@@ -51,16 +52,32 @@
 .comments {
   text-align: justify;
   overflow-y: auto;
-  height: 319px;
+  height: 401px;
 }
 
 .comments ul {
-  padding-left: 14px;
+  padding-left: 0;
   list-style: none;
 }
 
 .comment-add {
+  border-top: 1px solid black;
+  padding-top: 14px;
   bottom: 0;
+}
+
+.love {
+  height: 22px;
+  width: 25px;
+  margin-bottom: 9.5px;
+  margin-right: 6.5px;
+}
+
+.delete {
+  height: 22px;
+  width: 25px;
+  margin-bottom: 9.5px;
+  margin-left: 6.5px;
 }
 
 @media only screen and (max-width: 568px) {
